# nereus-ui

./: .gitignore  Cargo.toml  Dockerfile  LICENSE
api/: Cargo.toml
api/src/: main.rs
api/static/: index.html  nereus_wasm.js  nereus_wasm_bg.wasm
client/: package-lock.json  package.json
client/public/: index.html
client/src/: app.ts
src/: main.rs
