[package]
name = "nereus-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-http = "3.3.1"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
nereus = "0.1.0"

[[bin]]
path = "src/main.rs"
name = "nereus-ui"
